final fix in covers

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -9,9 +9,7 @@
 }
 .covers {
   padding: 0;
-
   width: 100vw;
-n
 }
 
 .hidden-title {
@@ -30,20 +28,18 @@ n
   width: 282px;
 }
 
+.content-marguee {
   /* max-width: 375px; */
   height: 508px;
   position: relative;
   overflow: hidden;
 }
+
 .marquee {
   width: fit-content;
   transform: rotate(17deg);
   position: absolute;
-x
-
   top: 10px;
-
-
 }
 
 .marquee__inner {
@@ -80,12 +76,12 @@ x
 
 /* tablet */
 @media only screen and (min-width: 768px) {
-  .covers > .container {
+  /* .covers > .container {
     max-width: 100%;
-  }
+  } */
 
   .content-marguee {
-    /* height: 960px; */
+    height: 960px;
   }
 
   .marquee__line.hidden-before-tablet {
@@ -99,22 +95,15 @@ x
     height: max-content;
 
   }
-    .content-marguee {
-      height: 960px;
-    }
             .covers-img {
               width: 544px;
             }
 }
 /* desktop */
 @media only screen and (min-width: 1440px) {
-  .covers > .container {
+  /* .covers > .container {
     max-width: 100%;
-  }
-
-  .content-marguee {
-    /* height: 960px; */
-  }
+  } */
 
   .marquee__line.hidden-before-desktop {
     display: flex;
